@@ -40,7 +40,7 @@ import BaseDoc
 from PluginUtils import Report, ReportOptions, ReportUtils, register_report
 pt2cm = ReportUtils.pt2cm
 from Filters import CustomFilters, GenericFilter, ParamFilter, Rules
-from DateHandler import DateDisplay
+import GrampsLocale
 import RelLib
 
 # _days could be added to DateDisplay:
@@ -202,7 +202,7 @@ class Calendar(Report.Report):
         self.doc.draw_bar("title", 0, 0, width, header)
         self.doc.draw_line("border", 0, header, width, header)
         year = self["year"]
-        title = "%s %d" % (DateDisplay._months[month], year)
+        title = "%s %d" % (GrampsLocale._months[month], year)
         font_height = pt2cm(1.25 * self["title"].get_size())
         self.doc.center_text("title", title, width/2, font_height + self["offset"]) # 1.0
         cell_width = width / 7
