@@ -1,3 +1,7 @@
+2006-05-14  Alex Roitman  <shura@gramps-project.org>
+	* src/DateHandler/__init__.py: Remove unneeded imports.
+	* src/plugins/Calendar.py (print_page): Use GrampsLocale._months.
+
 2006-05-14  Brian Matherly  <brian@gramps-project.org>
 	* src/PluginUtils/_ReportUtils.py: Change strings to include gender instead
 	  of "child of"
